kubernetes/namespaces/base/istio-ingress/plex/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: plex
  namespace: istio-ingress
spec:
  host: "plex.raspbernetes.com"
  trafficPolicy:
    tls:
      mode: SIMPLE
