kubernetes/namespaces/base/istio-ingress/plex/plex.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: plex
  namespace: istio-ingress
spec:
  addresses:
    - ${EXT_NAS_IP}
  hosts:
    - plex.${CLUSTER_DOMAIN}
  ports:
    - number: 32400
      name: tcp
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: ${EXT_NAS_IP}
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: plex
  namespace: istio-ingress
spec:
  host: plex.${CLUSTER_DOMAIN}
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/istio-ingressgateway
  hosts:
    - plex.${CLUSTER_DOMAIN}
  http:
    - match:
        - uri:
            exact: /
      redirect:
        uri: "/web/index.html"
    - route:
        - destination:
            host: plex.${CLUSTER_DOMAIN}
            port:
              number: 32400
