kubernetes/namespaces/base/istio-ingress/plex/serviceentry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: plex
  namespace: istio-ingress
spec:
  addresses:
  # TODO: use ${EXT_NAS_IP}
    - 192.168.50.150
  hosts:
    - plex.raspbernetes.com
  location: MESH_EXTERNAL
  ports:
    - number: 32400
      name: http
      protocol: HTTP
  resolution: NONE
