kubernetes/namespaces/base/istio-ingress/plex/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/istio-ingressgateway
  hosts:
    - 'plex.raspbernetes.com'
  http:
    - match:
        - uri:
            exact: "/"
      route:
        - destination:
            host: plex.raspbernetes.com
            port:
              number: 32400
